--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,127 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@article{bushuiev2025selfsupervised,
+	title        = {Self-supervised learning of molecular representations from millions of tandem mass spectra using DreaMS},
+	author       = {Roman Bushuiev* and
+                  Anton Bushuiev* and
+                  Raman Samusevich and
+                  Corinna Brungs and
+                  Josef Sivic and
+                  Tom{\'{a}}s Pluskal},
+	year         = 2025,
+	journal      = {Nature Biotechnology (in press)},
+	doi          = {10.26434/chemrxiv-2023-kss3r-v4},
   selected={true},
-  inspirehep_id = {3255}
+  preview = {dreams.png},
+  poster={https://github.com/pluskal-lab/DreaMS/blob/main/assets/2024_metabolomics_poster.pdf}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{bushuiev2024massspecgym,
+  author       = {Roman Bushuiev* and
+                  Anton Bushuiev* and
+                  Niek F. de Jonge and
+                  Adamo Young and
+                  Fleming Kretschmer and
+                  Raman Samusevich and
+                  Janne Heirman and
+                  Fei Wang and
+                  Luke Zhang and
+                  Kai D{\"{u}}hrkop and
+                  Marcus Ludwig and
+                  Nils A. Haupt and
+                  Apurva Kalia and
+                  Corinna Brungs and
+                  Robin Schmid and
+                  Russell Greiner and
+                  Bo Wang and
+                  David S. Wishart and
+                  Liping Liu and
+                  Juho Rousu and
+                  Wout Bittremieux and
+                  Hannes Rost and
+                  Tytus D. Mak and
+                  Soha Hassoun and
+                  Florian Huber and
+                  Justin J. J. van der Hooft and
+                  Michael A. Stravs and
+                  Sebastian B{\"{o}}cker and
+                  Josef Sivic and
+                  Tom{\'{a}}s Pluskal},
+  editor       = {Amir Globersons and
+                  Lester Mackey and
+                  Danielle Belgrave and
+                  Angela Fan and
+                  Ulrich Paquet and
+                  Jakub M. Tomczak and
+                  Cheng Zhang},
+  title        = {MassSpecGym: {A} benchmark for the discovery and identification of
+                  molecules},
+  booktitle    = {Advances in Neural Information Processing Systems 38: Annual Conference
+                  on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver,
+                  BC, Canada, December 10 - 15, 2024},
+  year         = {2024},
+  journal = {NeurIPS Datasets & Benchmarks (Spotlight)},
+  doi={10.48550/arXiv.2410.23326},
+  selected={true},
+  preview = {massspecgym.png},
+  video={https://neurips.cc/virtual/2024/poster/97823},
+  poster={https://github.com/pluskal-lab/MassSpecGym/blob/main/assets/MassSpecGym_poster_neurips2024.pdf},
+  news={https://www.wired.cz/news-beat/cesi-stoji-v-cele-globalni-iniciativy-pro-objevovani-molekul-s-vyuzitim-ai}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{bushuiev2024learning,
+  author       = {Anton Bushuiev* and
+                  Roman Bushuiev* and
+                  Petr Kouba and
+                  Anatolii Filkin and
+                  Marketa Gabrielova and
+                  Michal Gabriel and
+                  Jir{\'{\i}} Sedl{\'{a}}r and
+                  Tom{\'{a}}s Pluskal and
+                  Jir{\'{\i}} Damborsk{\'{y}} and
+                  Stanislav Mazurenko and
+                  Josef Sivic},
+  title        = {Learning to design protein-protein interactions with enhanced generalization},
+  year         = {2024},
+  journal      = {ICLR},
+  doi          = {10.48550/arXiv.2310.18515},
+  selected={true},
+  preview = {ppiformer.png},
+  video={https://iclr.cc/virtual/2024/poster/17449},
+  news={https://www.ciirc.cvut.cz/scientists-from-ciirc-ctu-empower-the-computational-design-of-biotherapeutics/}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{bushuiev2024training,
+  author       = {Anton Bushuiev* and
+                  Roman Bushuiev* and
+                  Nikola Zadorozhny and
+                  Raman Samusevich and
+                  Hannes St{\"{a}}rk and
+                  Jir{\'{\i}} Sedl{\'{a}}r and
+                  Tom{\'{a}}s Pluskal and
+                  Josef Sivic},
+  title        = {Training on test proteins improves fitness, structure, and function
+                  prediction},
+  year         = {2025},
+  journal      = {arXiv},
+  doi          = {10.48550/ARXIV.2411.02109},
+  selected={true},
+  preview = {proteinttt.png}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{bushuiev2024revealing,
+  author       = {Anton Bushuiev* and
+                  Roman Bushuiev* and
+                  Jir{\'{\i}} Sedl{\'{a}}r and
+                  Tom{\'{a}}s Pluskal and
+                  Jir{\'{\i}} Damborsk{\'{y}} and
+                  Stanislav Mazurenko and
+                  Josef Sivic},
+  title        = {Revealing data leakage in protein interaction benchmarks},
+  journal      = {ICLR GEM workshop},
+  year         = {2024},
+  url          = {https://doi.org/10.48550/arXiv.2404.10457},
+  doi          = {10.48550/ARXIV.2404.10457},
+  selected={true},
+  preview = {ppileakage.png}
 }
