Fix papers and bio wording

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,8 +17,8 @@
 }
 
 @article{bushuiev2024massspecgym,
-  author       = {Roman Bushuiev* and
-                  Anton Bushuiev* and
+  author       = {Roman Bushuiev and
+                  Anton Bushuiev and
                   Niek F. de Jonge and
                   Adamo Young and
                   Fleming Kretschmer and
@@ -60,7 +60,7 @@
                   on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver,
                   BC, Canada, December 10 - 15, 2024},
   year         = {2024},
-  journal = {NeurIPS Datasets & Benchmarks (Spotlight)},
+  journal = {NeurIPS Datasets & Benchmarks (Spotlight paper)},
   doi={10.48550/arXiv.2410.23326},
   selected={true},
   preview = {massspecgym.png},
