--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -125,3 +125,75 @@
   selected={true},
   preview = {ppileakage.png}
 }
+
+@Article{schmid2023integrative,
+author={Schmid, Robin
+and Heuckeroth, Steffen
+and Korf, Ansgar
+and Smirnov, Aleksandr
+and Myers, Owen
+and Dyrlund, Thomas S.
+and Bushuiev, Roman
+and Murray, Kevin J.
+and Hoffmann, Nils
+and Lu, Miaoshan
+and Sarvepalli, Abinesh
+and Zhang, Zheng
+and Fleischauer, Markus
+and D{\"u}hrkop, Kai
+and Wesner, Mark
+and Hoogstra, Shawn J.
+and Rudt, Edward
+and Mokshyna, Olena
+and Brungs, Corinna
+and Ponomarov, Kirill
+and Mutabd{\v{z}}ija, Lana
+and Damiani, Tito
+and Pudney, Chris J.
+and Earll, Mark
+and Helmer, Patrick O.
+and Fallon, Timothy R.
+and Schulze, Tobias
+and Rivas-Ubach, Albert
+and Bilbao, Aivett
+and Richter, Henning
+and Nothias, Louis-F{\'e}lix
+and Wang, Mingxun
+and Ore{\v{s}}i{\v{c}}, Matej
+and Weng, Jing-Ke
+and B{\"o}cker, Sebastian
+and Jeibmann, Astrid
+and Hayen, Heiko
+and Karst, Uwe
+and Dorrestein, Pieter C.
+and Petras, Daniel
+and Du, Xiuxia
+and Pluskal, Tom{\'a}{\v{s}}},
+title={Integrative analysis of multimodal mass spectrometry data in MZmine 3},
+journal={Nature Biotechnology},
+year={2023},
+month={Apr},
+day={01},
+volume={41},
+number={4},
+pages={447-449},
+issn={1546-1696},
+doi={10.1038/s41587-023-01690-2},
+url={https://doi.org/10.1038/s41587-023-01690-2},
+selected={false},
+preview={mzmine3.png}
+}
+
+@article {samusevich2024structure,
+	author = {Samusevich, Raman and Hebra, T{\'e}o and Bushuiev, Roman and Engst, Martin and Kulh{\'a}nek, Jon{\'a}{\v s} and Bushuiev, Anton and Smith, Joshua D. and {\v C}alounov{\'a}, Tereza and Smr{\v c}kov{\'a}, Helena and Molineris, Marina and Schwartz, Renana and Tajovsk{\'a}, Ad{\'e}la and Perkovi{\'c}, Milana and Chatpatanasiri, Ratthachat and Kampranis, Sotirios C. and Major, Dan Thomas and Sivic, Josef and Pluskal, Tom{\'a}{\v s}},
+	title = {Structure-enabled enzyme function prediction unveils elusive terpenoid biosynthesis in archaea},
+	elocation-id = {2024.01.29.577750},
+	year = {2025},
+	doi = {10.1101/2024.01.29.577750},
+	publisher = {Cold Spring Harbor Laboratory},
+	URL = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750},
+	eprint = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750.full.pdf},
+	journal = {bioRxiv},
+  selected={false},
+  preview={enzymeexplorer.png}
+}
