--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,198 +2,84 @@
 ---
 @article{bushuiev2025selfsupervised,
 	title        = {Self-supervised learning of molecular representations from millions of tandem mass spectra using DreaMS},
-	author       = {Roman Bushuiev* and
-                  Anton Bushuiev* and
-                  Raman Samusevich and
-                  Corinna Brungs and
-                  Josef Sivic and
-                  Tom{\'{a}}s Pluskal},
+	author       = {Roman Bushuiev* and Anton Bushuiev* and Raman Samusevich and Corinna Brungs and Josef Sivic and Tom{\'{a}}s Pluskal},
 	year         = 2025,
 	journal      = {Nature Biotechnology (in press)},
 	doi          = {10.26434/chemrxiv-2023-kss3r-v4},
-  selected={true},
-  preview = {dreams.png},
-  poster={https://github.com/pluskal-lab/DreaMS/blob/main/assets/2024_metabolomics_poster.pdf}
+	selected     = {true},
+	preview      = {dreams.png},
+	poster       = {https://github.com/pluskal-lab/DreaMS/blob/main/assets/2024_metabolomics_poster.pdf}
 }
 
 @article{bushuiev2024massspecgym,
-  author       = {Roman Bushuiev and
-                  Anton Bushuiev and
-                  Niek F. de Jonge and
-                  Adamo Young and
-                  Fleming Kretschmer and
-                  Raman Samusevich and
-                  Janne Heirman and
-                  Fei Wang and
-                  Luke Zhang and
-                  Kai D{\"{u}}hrkop and
-                  Marcus Ludwig and
-                  Nils A. Haupt and
-                  Apurva Kalia and
-                  Corinna Brungs and
-                  Robin Schmid and
-                  Russell Greiner and
-                  Bo Wang and
-                  David S. Wishart and
-                  Liping Liu and
-                  Juho Rousu and
-                  Wout Bittremieux and
-                  Hannes Rost and
-                  Tytus D. Mak and
-                  Soha Hassoun and
-                  Florian Huber and
-                  Justin J. J. van der Hooft and
-                  Michael A. Stravs and
-                  Sebastian B{\"{o}}cker and
-                  Josef Sivic and
-                  Tom{\'{a}}s Pluskal},
-  editor       = {Amir Globersons and
-                  Lester Mackey and
-                  Danielle Belgrave and
-                  Angela Fan and
-                  Ulrich Paquet and
-                  Jakub M. Tomczak and
-                  Cheng Zhang},
-  title        = {MassSpecGym: {A} benchmark for the discovery and identification of
-                  molecules},
-  booktitle    = {Advances in Neural Information Processing Systems 38: Annual Conference
-                  on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver,
-                  BC, Canada, December 10 - 15, 2024},
-  year         = {2024},
-  journal = {NeurIPS Datasets & Benchmarks (Spotlight paper)},
-  doi={10.48550/arXiv.2410.23326},
-  selected={true},
-  preview = {massspecgym.png},
-  video={https://neurips.cc/virtual/2024/poster/97823},
-  poster={https://github.com/pluskal-lab/MassSpecGym/blob/main/assets/MassSpecGym_poster_neurips2024.pdf},
-  news={https://www.wired.cz/news-beat/cesi-stoji-v-cele-globalni-iniciativy-pro-objevovani-molekul-s-vyuzitim-ai}
+	title        = {MassSpecGym: {A} benchmark for the discovery and identification of molecules},
+	author       = {Roman Bushuiev and Anton Bushuiev and Niek F. de Jonge and Adamo Young and Fleming Kretschmer and Raman Samusevich and Janne Heirman and Fei Wang and Luke Zhang and Kai D{\"{u}}hrkop and Marcus Ludwig and Nils A. Haupt and Apurva Kalia and Corinna Brungs and Robin Schmid and Russell Greiner and Bo Wang and David S. Wishart and Liping Liu and Juho Rousu and Wout Bittremieux and Hannes Rost and Tytus D. Mak and Soha Hassoun and Florian Huber and Justin J. J. van der Hooft and Michael A. Stravs and Sebastian B{\"{o}}cker and Josef Sivic and Tom{\'{a}}s Pluskal},
+	year         = 2024,
+	journal      = {NeurIPS Datasets & Benchmarks (Spotlight paper)},
+	booktitle    = {Advances in Neural Information Processing Systems 38: Annual Conference on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver, BC, Canada, December 10 - 15, 2024},
+	doi          = {10.48550/arXiv.2410.23326},
+	editor       = {Amir Globersons and Lester Mackey and Danielle Belgrave and Angela Fan and Ulrich Paquet and Jakub M. Tomczak and Cheng Zhang},
+	selected     = {true},
+	preview      = {massspecgym.png},
+	video        = {https://neurips.cc/virtual/2024/poster/97823},
+	poster       = {https://github.com/pluskal-lab/MassSpecGym/blob/main/assets/MassSpecGym_poster_neurips2024.pdf},
+	news         = {https://www.wired.cz/news-beat/cesi-stoji-v-cele-globalni-iniciativy-pro-objevovani-molekul-s-vyuzitim-ai}
 }
 
 @article{bushuiev2024learning,
-  author       = {Anton Bushuiev* and
-                  Roman Bushuiev* and
-                  Petr Kouba and
-                  Anatolii Filkin and
-                  Marketa Gabrielova and
-                  Michal Gabriel and
-                  Jir{\'{\i}} Sedl{\'{a}}r and
-                  Tom{\'{a}}s Pluskal and
-                  Jir{\'{\i}} Damborsk{\'{y}} and
-                  Stanislav Mazurenko and
-                  Josef Sivic},
-  title        = {Learning to design protein-protein interactions with enhanced generalization},
-  year         = {2024},
-  journal      = {ICLR},
-  doi          = {10.48550/arXiv.2310.18515},
-  selected={true},
-  preview = {ppiformer.png},
-  video={https://iclr.cc/virtual/2024/poster/17449},
-  news={https://www.ciirc.cvut.cz/scientists-from-ciirc-ctu-empower-the-computational-design-of-biotherapeutics/}
+	title        = {Learning to design protein-protein interactions with enhanced generalization},
+	author       = {Anton Bushuiev* and Roman Bushuiev* and Petr Kouba and Anatolii Filkin and Marketa Gabrielova and Michal Gabriel and Jir{\'{\i}} Sedl{\'{a}}r and Tom{\'{a}}s Pluskal and Jir{\'{\i}} Damborsk{\'{y}} and Stanislav Mazurenko and Josef Sivic},
+	year         = 2024,
+	journal      = {ICLR},
+	doi          = {10.48550/arXiv.2310.18515},
+	selected     = {true},
+	preview      = {ppiformer.png},
+	video        = {https://iclr.cc/virtual/2024/poster/17449},
+	news         = {https://www.ciirc.cvut.cz/scientists-from-ciirc-ctu-empower-the-computational-design-of-biotherapeutics/}
 }
 
 @article{bushuiev2024training,
-  author       = {Anton Bushuiev* and
-                  Roman Bushuiev* and
-                  Nikola Zadorozhny and
-                  Raman Samusevich and
-                  Hannes St{\"{a}}rk and
-                  Jir{\'{\i}} Sedl{\'{a}}r and
-                  Tom{\'{a}}s Pluskal and
-                  Josef Sivic},
-  title        = {Training on test proteins improves fitness, structure, and function
-                  prediction},
-  year         = {2025},
-  journal      = {arXiv},
-  doi          = {10.48550/ARXIV.2411.02109},
-  selected={true},
-  preview = {proteinttt.png}
+	title        = {Training on test proteins improves fitness, structure, and function prediction},
+	author       = {Anton Bushuiev* and Roman Bushuiev* and Nikola Zadorozhny and Raman Samusevich and Hannes St{\"{a}}rk and Jir{\'{\i}} Sedl{\'{a}}r and Tom{\'{a}}s Pluskal and Josef Sivic},
+	year         = 2025,
+	journal      = {arXiv},
+	doi          = {10.48550/ARXIV.2411.02109},
+	selected     = {true},
+	preview      = {proteinttt.png}
 }
 
 @article{bushuiev2024revealing,
-  author       = {Anton Bushuiev* and
-                  Roman Bushuiev* and
-                  Jir{\'{\i}} Sedl{\'{a}}r and
-                  Tom{\'{a}}s Pluskal and
-                  Jir{\'{\i}} Damborsk{\'{y}} and
-                  Stanislav Mazurenko and
-                  Josef Sivic},
-  title        = {Revealing data leakage in protein interaction benchmarks},
-  journal      = {ICLR GEM workshop},
-  year         = {2024},
-  url          = {https://doi.org/10.48550/arXiv.2404.10457},
-  doi          = {10.48550/ARXIV.2404.10457},
-  selected={true},
-  preview = {ppileakage.png}
+	title        = {Revealing data leakage in protein interaction benchmarks},
+	author       = {Anton Bushuiev* and Roman Bushuiev* and Jir{\'{\i}} Sedl{\'{a}}r and Tom{\'{a}}s Pluskal and Jir{\'{\i}} Damborsk{\'{y}} and Stanislav Mazurenko and Josef Sivic},
+	year         = 2024,
+	journal      = {ICLR GEM workshop},
+	doi          = {10.48550/ARXIV.2404.10457},
+	url          = {https://doi.org/10.48550/arXiv.2404.10457},
+	selected     = {true},
+	preview      = {ppileakage.png}
 }
 
-@Article{schmid2023integrative,
-author={Schmid, Robin
-and Heuckeroth, Steffen
-and Korf, Ansgar
-and Smirnov, Aleksandr
-and Myers, Owen
-and Dyrlund, Thomas S.
-and Bushuiev, Roman
-and Murray, Kevin J.
-and Hoffmann, Nils
-and Lu, Miaoshan
-and Sarvepalli, Abinesh
-and Zhang, Zheng
-and Fleischauer, Markus
-and D{\"u}hrkop, Kai
-and Wesner, Mark
-and Hoogstra, Shawn J.
-and Rudt, Edward
-and Mokshyna, Olena
-and Brungs, Corinna
-and Ponomarov, Kirill
-and Mutabd{\v{z}}ija, Lana
-and Damiani, Tito
-and Pudney, Chris J.
-and Earll, Mark
-and Helmer, Patrick O.
-and Fallon, Timothy R.
-and Schulze, Tobias
-and Rivas-Ubach, Albert
-and Bilbao, Aivett
-and Richter, Henning
-and Nothias, Louis-F{\'e}lix
-and Wang, Mingxun
-and Ore{\v{s}}i{\v{c}}, Matej
-and Weng, Jing-Ke
-and B{\"o}cker, Sebastian
-and Jeibmann, Astrid
-and Hayen, Heiko
-and Karst, Uwe
-and Dorrestein, Pieter C.
-and Petras, Daniel
-and Du, Xiuxia
-and Pluskal, Tom{\'a}{\v{s}}},
-title={Integrative analysis of multimodal mass spectrometry data in MZmine 3},
-journal={Nature Biotechnology},
-year={2023},
-month={Apr},
-day={01},
-volume={41},
-number={4},
-pages={447-449},
-issn={1546-1696},
-doi={10.1038/s41587-023-01690-2},
-url={https://doi.org/10.1038/s41587-023-01690-2},
-selected={false},
-preview={mzmine3.png}
+@article{schmid2023integrative,
+	title        = {Integrative analysis of multimodal mass spectrometry data in MZmine 3},
+	author       = {Schmid, Robin and Heuckeroth, Steffen and Korf, Ansgar and Smirnov, Aleksandr and Myers, Owen and Dyrlund, Thomas S. and Bushuiev, Roman and Murray, Kevin J. and Hoffmann, Nils and Lu, Miaoshan and Sarvepalli, Abinesh and Zhang, Zheng and Fleischauer, Markus and D{\"u}hrkop, Kai and Wesner, Mark and Hoogstra, Shawn J. and Rudt, Edward and Mokshyna, Olena and Brungs, Corinna and Ponomarov, Kirill and Mutabd{\v{z}}ija, Lana and Damiani, Tito and Pudney, Chris J. and Earll, Mark and Helmer, Patrick O. and Fallon, Timothy R. and Schulze, Tobias and Rivas-Ubach, Albert and Bilbao, Aivett and Richter, Henning and Nothias, Louis-F{\'e}lix and Wang, Mingxun and Ore{\v{s}}i{\v{c}}, Matej and Weng, Jing-Ke and B{\"o}cker, Sebastian and Jeibmann, Astrid and Hayen, Heiko and Karst, Uwe and Dorrestein, Pieter C. and Petras, Daniel and Du, Xiuxia and Pluskal, Tom{\'a}{\v{s}}},
+	year         = 2023,
+	journal      = {Nature Biotechnology},
+	doi          = {10.1038/s41587-023-01690-2},
+	url          = {https://doi.org/10.1038/s41587-023-01690-2},
+	selected     = {false},
+	preview      = {mzmine3.png}
 }
 
-@article {samusevich2024structure,
-	author = {Samusevich, Raman and Hebra, T{\'e}o and Bushuiev, Roman and Engst, Martin and Kulh{\'a}nek, Jon{\'a}{\v s} and Bushuiev, Anton and Smith, Joshua D. and {\v C}alounov{\'a}, Tereza and Smr{\v c}kov{\'a}, Helena and Molineris, Marina and Schwartz, Renana and Tajovsk{\'a}, Ad{\'e}la and Perkovi{\'c}, Milana and Chatpatanasiri, Ratthachat and Kampranis, Sotirios C. and Major, Dan Thomas and Sivic, Josef and Pluskal, Tom{\'a}{\v s}},
-	title = {Structure-enabled enzyme function prediction unveils elusive terpenoid biosynthesis in archaea},
+@article{samusevich2024structure,
+	title        = {Structure-enabled enzyme function prediction unveils elusive terpenoid biosynthesis in archaea},
+	author       = {Samusevich, Raman and Hebra, T{\'e}o and Bushuiev, Roman and Engst, Martin and Kulh{\'a}nek, Jon{\'a}{\v s} and Bushuiev, Anton and Smith, Joshua D. and {\v C}alounov{\'a}, Tereza and Smr{\v c}kov{\'a}, Helena and Molineris, Marina and Schwartz, Renana and Tajovsk{\'a}, Ad{\'e}la and Perkovi{\'c}, Milana and Chatpatanasiri, Ratthachat and Kampranis, Sotirios C. and Major, Dan Thomas and Sivic, Josef and Pluskal, Tom{\'a}{\v s}},
+	year         = 2025,
+	journal      = {bioRxiv},
+	publisher    = {Cold Spring Harbor Laboratory},
+	doi          = {10.1101/2024.01.29.577750},
+	url          = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750},
 	elocation-id = {2024.01.29.577750},
-	year = {2025},
-	doi = {10.1101/2024.01.29.577750},
-	publisher = {Cold Spring Harbor Laboratory},
-	URL = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750},
-	eprint = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750.full.pdf},
-	journal = {bioRxiv},
-  selected={false},
-  preview={enzymeexplorer.png}
+	eprint       = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750.full.pdf},
+	selected     = {false},
+	preview      = {enzymeexplorer.png}
 }
