--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @article{bushuiev2025selfsupervised,
 	title        = {Self-supervised learning of molecular representations from millions of tandem mass spectra using DreaMS},
-	author       = {Roman Bushuiev* and Anton Bushuiev* and Raman Samusevich and Corinna Brungs and Josef Sivic and Tom{\'{a}}s Pluskal},
+	author       = {Roman Bushuiev* and Anton Bushuiev* and Raman Samusevich and Corinna Brungs and Josef Sivic and Tom{\'{a}}{\v{s}} Pluskal},
 	year         = 2025,
 	journal      = {Nature Biotechnology (in press)},
 	doi          = {10.26434/chemrxiv-2023-kss3r-v4},
@@ -13,7 +13,7 @@
 
 @article{bushuiev2024massspecgym,
 	title        = {MassSpecGym: {A} benchmark for the discovery and identification of molecules},
-	author       = {Roman Bushuiev and Anton Bushuiev and Niek F. de Jonge and Adamo Young and Fleming Kretschmer and Raman Samusevich and Janne Heirman and Fei Wang and Luke Zhang and Kai D{\"{u}}hrkop and Marcus Ludwig and Nils A. Haupt and Apurva Kalia and Corinna Brungs and Robin Schmid and Russell Greiner and Bo Wang and David S. Wishart and Liping Liu and Juho Rousu and Wout Bittremieux and Hannes Rost and Tytus D. Mak and Soha Hassoun and Florian Huber and Justin J. J. van der Hooft and Michael A. Stravs and Sebastian B{\"{o}}cker and Josef Sivic and Tom{\'{a}}s Pluskal},
+	author       = {Roman Bushuiev and Anton Bushuiev and Niek F. de Jonge and Adamo Young and Fleming Kretschmer and Raman Samusevich and Janne Heirman and Fei Wang and Luke Zhang and Kai D{\"{u}}hrkop and Marcus Ludwig and Nils A. Haupt and Apurva Kalia and Corinna Brungs and Robin Schmid and Russell Greiner and Bo Wang and David S. Wishart and Liping Liu and Juho Rousu and Wout Bittremieux and Hannes Rost and Tytus D. Mak and Soha Hassoun and Florian Huber and Justin J. J. van der Hooft and Michael A. Stravs and Sebastian B{\"{o}}cker and Josef Sivic and Tom{\'{a}}{\v{s}} Pluskal},
 	year         = 2024,
 	journal      = {NeurIPS Datasets & Benchmarks (Spotlight paper)},
 	booktitle    = {Advances in Neural Information Processing Systems 38: Annual Conference on Neural Information Processing Systems 2024, NeurIPS 2024, Vancouver, BC, Canada, December 10 - 15, 2024},
@@ -28,7 +28,7 @@
 
 @article{bushuiev2024learning,
 	title        = {Learning to design protein-protein interactions with enhanced generalization},
-	author       = {Anton Bushuiev* and Roman Bushuiev* and Petr Kouba and Anatolii Filkin and Marketa Gabrielova and Michal Gabriel and Jir{\'{\i}} Sedl{\'{a}}r and Tom{\'{a}}s Pluskal and Jir{\'{\i}} Damborsk{\'{y}} and Stanislav Mazurenko and Josef Sivic},
+	author       = {Anton Bushuiev* and Roman Bushuiev* and Petr Kouba and Anatolii Filkin and Marketa Gabrielova and Michal Gabriel and Ji{\v{r}}{\'{\i}} Sedl{\'{a}}{\v{r}} and Tom{\'{a}}{\v{s}} Pluskal and Ji{\v{r}}{\'{\i}} Damborsk{\'{y}} and Stanislav Mazurenko and Josef Sivic},
 	year         = 2024,
 	journal      = {ICLR},
 	doi          = {10.48550/arXiv.2310.18515},
@@ -40,7 +40,7 @@
 
 @article{bushuiev2024training,
 	title        = {Training on test proteins improves fitness, structure, and function prediction},
-	author       = {Anton Bushuiev* and Roman Bushuiev* and Nikola Zadorozhny and Raman Samusevich and Hannes St{\"{a}}rk and Jir{\'{\i}} Sedl{\'{a}}r and Tom{\'{a}}s Pluskal and Josef Sivic},
+	author       = {Anton Bushuiev* and Roman Bushuiev* and Nikola Zadorozhny and Raman Samusevich and Hannes St{\"{a}}rk and Ji{\v{r}}{\'{\i}} Sedl{\'{a}}{\v{r}} and Tom{\'{a}}{\v{s}} Pluskal and Josef Sivic},
 	year         = 2025,
 	journal      = {arXiv},
 	doi          = {10.48550/ARXIV.2411.02109},
@@ -50,7 +50,7 @@
 
 @article{bushuiev2024revealing,
 	title        = {Revealing data leakage in protein interaction benchmarks},
-	author       = {Anton Bushuiev* and Roman Bushuiev* and Jir{\'{\i}} Sedl{\'{a}}r and Tom{\'{a}}s Pluskal and Jir{\'{\i}} Damborsk{\'{y}} and Stanislav Mazurenko and Josef Sivic},
+	author       = {Anton Bushuiev* and Roman Bushuiev* and Ji{\v{r}}{\'{\i}} Sedl{\'{a}}{\v{r}} and Tom{\'{a}}Tom{\'{a}}{\v{s}} Pluskal and Ji{\v{r}}{\'{\i}} Damborsk{\'{y}} and Stanislav Mazurenko and Josef Sivic},
 	year         = 2024,
 	journal      = {ICLR GEM workshop},
 	doi          = {10.48550/ARXIV.2404.10457},
@@ -61,7 +61,7 @@
 
 @article{schmid2023integrative,
 	title        = {Integrative analysis of multimodal mass spectrometry data in MZmine 3},
-	author       = {Schmid, Robin and Heuckeroth, Steffen and Korf, Ansgar and Smirnov, Aleksandr and Myers, Owen and Dyrlund, Thomas S. and Bushuiev, Roman and Murray, Kevin J. and Hoffmann, Nils and Lu, Miaoshan and Sarvepalli, Abinesh and Zhang, Zheng and Fleischauer, Markus and D{\"u}hrkop, Kai and Wesner, Mark and Hoogstra, Shawn J. and Rudt, Edward and Mokshyna, Olena and Brungs, Corinna and Ponomarov, Kirill and Mutabd{\v{z}}ija, Lana and Damiani, Tito and Pudney, Chris J. and Earll, Mark and Helmer, Patrick O. and Fallon, Timothy R. and Schulze, Tobias and Rivas-Ubach, Albert and Bilbao, Aivett and Richter, Henning and Nothias, Louis-F{\'e}lix and Wang, Mingxun and Ore{\v{s}}i{\v{c}}, Matej and Weng, Jing-Ke and B{\"o}cker, Sebastian and Jeibmann, Astrid and Hayen, Heiko and Karst, Uwe and Dorrestein, Pieter C. and Petras, Daniel and Du, Xiuxia and Pluskal, Tom{\'a}{\v{s}}},
+	author       = {Schmid, Robin and Heuckeroth, Steffen and Korf, Ansgar and Smirnov, Aleksandr and Myers, Owen and Dyrlund, Thomas S. and Bushuiev, Roman and Murray, Kevin J. and Hoffmann, Nils and Lu, Miaoshan and Sarvepalli, Abinesh and Zhang, Zheng and Fleischauer, Markus and D{\"u}hrkop, Kai and Wesner, Mark and Hoogstra, Shawn J. and Rudt, Edward and Mokshyna, Olena and Brungs, Corinna and Ponomarov, Kirill and Mutabd{\v{z}}ija, Lana and Damiani, Tito and Pudney, Chris J. and Earll, Mark and Helmer, Patrick O. and Fallon, Timothy R. and Schulze, Tobias and Rivas-Ubach, Albert and Bilbao, Aivett and Richter, Henning and Nothias, Louis-F{\'e}lix and Wang, Mingxun and OreTom{\'{a}}{\v{s}}i{\v{c}}, Matej and Weng, Jing-Ke and B{\"o}cker, Sebastian and Jeibmann, Astrid and Hayen, Heiko and Karst, Uwe and Dorrestein, Pieter C. and Petras, Daniel and Du, Xiuxia and Pluskal, Tom{\'a}Tom{\'{a}}{\v{s}}},
 	year         = 2023,
 	journal      = {Nature Biotechnology},
 	doi          = {10.1038/s41587-023-01690-2},
