--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,11 +4,13 @@
 	title        = {Self-supervised learning of molecular representations from millions of tandem mass spectra using DreaMS},
 	author       = {Roman Bushuiev* and Anton Bushuiev* and Raman Samusevich and Corinna Brungs and Josef Sivic and Tom{\'{a}}{\v{s}} Pluskal},
 	year         = 2025,
-	journal      = {Nature Biotechnology (in press)},
-	doi          = {10.26434/chemrxiv-2023-kss3r-v4},
+	journal      = {Nature Biotechnology},
+	doi          = {10.1038/s41587-025-02663-3},
 	selected     = {true},
 	preview      = {dreams.png},
-	poster       = {https://github.com/pluskal-lab/DreaMS/blob/main/assets/2024_metabolomics_poster.pdf}
+	poster       = {https://github.com/pluskal-lab/DreaMS/blob/main/assets/2024_metabolomics_poster.pdf},
+	code         = {https://github.com/pluskal-lab/DreaMS},
+	tutorials    = {https://dreams-docs.readthedocs.io/en/latest/}
 }
 
 @article{bushuiev2024massspecgym,
@@ -23,7 +25,9 @@
 	preview      = {massspecgym.png},
 	video        = {https://neurips.cc/virtual/2024/poster/97823},
 	poster       = {https://github.com/pluskal-lab/MassSpecGym/blob/main/assets/MassSpecGym_poster_neurips2024.pdf},
-	news         = {https://www.wired.cz/news-beat/cesi-stoji-v-cele-globalni-iniciativy-pro-objevovani-molekul-s-vyuzitim-ai}
+	news         = {https://www.wired.cz/news-beat/cesi-stoji-v-cele-globalni-iniciativy-pro-objevovani-molekul-s-vyuzitim-ai},
+	code         = {https://github.com/pluskal-lab/MassSpecGym},
+	dataset      = {https://huggingface.co/datasets/roman-bushuiev/MassSpecGym}
 }
 
 @article{bushuiev2024learning,
@@ -35,7 +39,9 @@
 	selected     = {true},
 	preview      = {ppiformer.png},
 	video        = {https://iclr.cc/virtual/2024/poster/17449},
-	news         = {https://www.ciirc.cvut.cz/scientists-from-ciirc-ctu-empower-the-computational-design-of-biotherapeutics/}
+	news         = {https://www.ciirc.cvut.cz/scientists-from-ciirc-ctu-empower-the-computational-design-of-biotherapeutics/},
+	code         = {https://github.com/anton-bushuiev/PPIformer},
+	dataset      = {https://github.com/anton-bushuiev/PPIRef}
 }
 
 @article{bushuiev2024training,
@@ -45,7 +51,8 @@
 	journal      = {arXiv},
 	doi          = {10.48550/ARXIV.2411.02109},
 	selected     = {true},
-	preview      = {proteinttt.png}
+	preview      = {proteinttt.png},
+	code         = {https://github.com/anton-bushuiev/ProteinTTT}
 }
 
 @article{bushuiev2024revealing,
@@ -81,5 +88,6 @@
 	elocation-id = {2024.01.29.577750},
 	eprint       = {https://www.biorxiv.org/content/early/2025/04/29/2024.01.29.577750.full.pdf},
 	selected     = {false},
-	preview      = {enzymeexplorer.png}
+	preview      = {enzymeexplorer.png},
+	code         = {https://github.com/pluskal-lab/EnzymeExplorer}
 }
