Fix Dataset button in papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
 	preview      = {dreams.png},
 	poster       = {https://github.com/pluskal-lab/DreaMS/blob/main/assets/2024_metabolomics_poster.pdf},
 	code         = {https://github.com/pluskal-lab/DreaMS},
-	tutorials    = {https://dreams-docs.readthedocs.io/en/latest/}
+	tutorials    = {https://dreams-docs.readthedocs.io/en/latest/},
+	dataset      = {https://huggingface.co/datasets/roman-bushuiev/GeMS}
 }
 
 @article{bushuiev2024massspecgym,
